In the create event.CSS I added the appropriate CSS to align the event type input with the rest of the form. For JSX I added a field where you can input the type of event. For the event_table.go I corrected the variables for the event type so it can be called

--- a/views/js/evently/src/CreateEvent.css
+++ b/views/js/evently/src/CreateEvent.css
@@ -60,7 +60,8 @@
 .image-url,
 .contact-info,
 .host-name,
-.event-title {
+.event-title,
+.event-type-selection {
   display: flex;
   flex-direction: column;
   font-size: 1.5em;
